# TestAgent

./: .env.example  .gitignore  .mcp.drission-ui.json  .mcp.drissionpage-mcp.json  .mcp.json  DrissionPage_官方文档.md  README.md  _git_force_sync.sh  append_material_cases.py  connect_browser.py  dp_configs.ini  drission-ui-使用手册.md  drission_ui_mcp.py  drissionpage_mcp.py  exploration-log-zldmxb.md  export_zldmb.py  fast_vtable_helper.py  filter_fields_data.json  fix_quotes.py  gen_filter_testcases.py  generate_filter_testcases.py  generate_testcases_zldmxb.py  main.py  package-lock.json  package.json  page_info.py  playwright_connect.js  playwright_interact.js  playwright_utils.js  pyproject.toml  set_LoginAuth.py  test_cases_output.py  vtable-cell-classify.ts  工资明细弹窗-测试用例.md  测试用例_托工管理_托工订单_2026-06-22.xlsx  测试用例_托工管理_托工订单新增_2026-06-22.xlsx  测试用例_生产管理_制造排产_筛选区精简高价值版_2026-07-02.xlsx
.codex/: README.md  config.toml
.trae/: mcp.json
configs/: dp_configs.example.ini  dp_configs.ini  drission-ui.example.json
docs/: SCM-MOM系统操作手册.md  SECURITY.md  action_plan.md  drission-ui-使用手册.md  drissionpage-test-automation-architecture.md  implementation_summary.md  mcp_service_optimization_report.md  playwright-mcp-借鉴分析.md  tools_comparison_analysis.md  项目使用说明.md
drissionpage-mcp/: README.md  browser_session.py  caps.py  config.py  filter_area.py  html_table.py  observe.py  pyproject.toml  resource_store.py  server.py  session_auth.py  vtable.py
drissionpage-mcp/js/: vtable-scanner.js
mcp-service/: .env.example  .gitignore  README.md  launcher.py  pyproject.toml
mcp-service/configs/: dp_configs.example.ini  dp_configs.ini
mcp-service/scripts/: verify_live.py
mcp-service/src/drissionpage_mcp/: __init__.py  __main__.py  server.py
mcp-service/src/drissionpage_mcp/assets/js/: element-scan.js  vtable-column-values.js  vtable-scanner.js
mcp-service/src/drissionpage_mcp/components/: __init__.py  __sync.py  _dispatch.py  _sync.py
mcp-service/src/drissionpage_mcp/components/core/: __init__.py  detect_layer_msg.py  layer.py  legacy_layer.py  page_family.py  session.py  tool_surface.py
mcp-service/src/drissionpage_mcp/components/devtools/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/filter/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/interaction/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/network/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/observe/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/page/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/roles/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/storage/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/vtable/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/components/workflow/: __init__.py  tools.py
mcp-service/src/drissionpage_mcp/core/: __init__.py  caps.py  config.py  lock.py  page_family.py  recipe_context.py  tool_metadata.py  ui_contract.py  ui_contract_legacy.py
mcp-service/src/drissionpage_mcp/resources/: resource_store.py
mcp-service/src/drissionpage_mcp/services/: __init__.py  bootstrap_select.py  bootstrap_table.py  browser_context.py  browser_session.py  devtools.py  filter_area.py  html_table.py  interaction.py  layer_modal.py  legacy_layer_flow.py  modal.py  network_record.py  observe.py  page_model.py  page_scan.py  role_sessions.py  session_auth.py  table_facade.py  vtable.py
mcp-service/src/drissionpage_mcp/workflows/: __init__.py  flow_evidence.py  flow_ops.py  recipe_execution.py  test_execution.py  testcase_generation.py
mcp-service/tests/: test_bootstrap_row_selection.py  test_bundle_report_assets.py  test_component_providers.py  test_explore_action.py  test_fastmcp_runtime.py  test_legacy_layer_flow.py  test_page_family_and_table_routing.py  test_role_recipe.py  test_role_sessions.py  test_service.py  test_service_extraction.py  test_vtable_column_identity.py  test_vtable_lifecycle.py
scratch/: modal_dom.yml
screenshots/: dom-tree-test.json  dom_tree_filter_area.json  (+3 more)
(+142 files in other folders)
