[project]
name = "testagent"
version = "0.1.0"
description = "Enterprise test automation project using the refactored DrissionPage MCP service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drissionpage-mcp-refactored",
]

[tool.uv]
package = false

[tool.uv.sources]
drissionpage-mcp-refactored = { path = "mcp-service", editable = true }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["mcp-service/src"]
testpaths = ["tests"]
