[project]
name = "testagent"
version = "0.1.0"
description = "Enterprise test automation project using the DrissionPage MCP service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drissionpage-mcp",
    "openpyxl>=3.1.5",
]

[tool.uv]
package = false

[tool.uv.sources]
drissionpage-mcp = { workspace = true }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.workspace]
members = ["mcp-service"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mcp-service/tests"]
