[project]
name = "drissionpage-mcp"
version = "0.1.0"
description = "Standalone DrissionPage-only MCP service for SCM/MOM/ERP browser automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddddocr>=1.6.1",
    "drissionpage>=4.1.1.4,<4.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1,<2",
    "openpyxl>=3.1.5",
]

[project.scripts]
drissionpage-mcp = "server:main"

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
